[gd_scene load_steps=3 format=3 uid="uid://c4yy0dl2nudnu"]

[ext_resource type="Script" path="res://add_wood.gd" id="1_ddeor"]
[ext_resource type="PackedScene" uid="uid://dcwhfjldplcw4" path="res://inventory_panel.tscn" id="1_iiyhe"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ddeor")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -49.0
offset_right = 66.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
columns = 7

[node name="inventory panel4" parent="NinePatchRect/GridContainer" instance=ExtResource("1_iiyhe")]
layout_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 135.0
offset_bottom = 83.0

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 144.0
offset_right = 279.0
offset_bottom = 83.0

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 296.0
offset_right = 431.0
offset_bottom = 83.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
